Added Form Input and Traffic Overlay/Working to attach result to new location request

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
   <header class="row"><h1>Hi</h1></header>
   <div class="row">
     <div class="col-6"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati suscipit eos rem rerum quisquam nesciunt? Soluta, similique saepe suscipit ratione aliquid perspiciatis. Unde cupiditate placeat, blanditiis similique rerum officiis quo tenetur ipsa! Quo blanditiis magni cum ipsam amet provident sunt, ut culpa reiciendis! Aliquam reprehenderit iste repellat dolore, laboriosam, adipisci nobis eum doloremque hic aut, ut qui alias voluptates distinctio nostrum mollitia commodi optio facere sapiente! Sit earum officia ipsam accusamus ratione natus accusantium, assumenda quae, facilis nesciunt modi ad totam, neque perspiciatis nulla sequi voluptatibus? Officiis sunt aut aspernatur quia non, aperiam autem excepturi, quasi neque, commodi pariatur. Incidunt debitis perferendis at, consequatur voluptas, quam sint eligendi quaerat, ipsum animi consectetur? Consectetur reprehenderit nulla earum, est repudiandae in perferendis incidunt repellat omnis. Dicta praesentium sit voluptas distinctio totam ullam dolorem et quaerat voluptatum asperiores dignissimos, sapiente neque perspiciatis officia sint consequatur itaque modi deserunt rerum ipsa corrupti! Dignissimos quae a sit porro ducimus voluptatum asperiores aspernatur rerum ea sapiente molestias corrupti tempore esse fuga ut sed temporibus mollitia voluptate provident quis quia, deleniti deserunt. Facilis provident, perspiciatis amet voluptate distinctio praesentium quisquam necessitatibus quasi assumenda tempora pariatur nulla impedit harum aspernatur facere cum quis! Alias aliquam similique quaerat facere.</p></div>
-    <div class="col-6 d-inline-block h-100" id="map"></div>
+    <div class="col-6">
+      <div class="h-100" id="map"></div>
+      <div>
+        <form action="">
+          <label for="destination">Where Do You Wanna Be?</label>
+          <input type="text" name="destination" id="destination">
+        </form>
+      </div>
+    </div>
   </div>
 
   <script src="components/app.js"></script>
