--- a/index.html
+++ b/index.html
@@ -5,21 +5,39 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
-      <title>hackathon</title>
+      <title>Hackathon 2</title>
   </head>
   <body class="container">
-    <header>
-      <div class="location"></div>
+    <header class="row">
+      <div class="col-3 text-left location border border-danger"></div>
+      <div class="col-6 text-center border border-danger">Header</div>
+      <div class="col-3 text-right border border-danger">Stocks & Weather</div>
     </header>
 
-    <main>
-
+    <main class="row">
+      <div class="col-8 border border-danger">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus fuga possimus sed? Corporis, corrupti laborum. Illo, necessitatibus, nostrum consequuntur quod explicabo quisquam asperiores earum quidem quia, repellat iure id ullam?
+        Consequatur aliquid quidem ipsa voluptates consectetur. Dolores numquam possimus, deleniti cum esse voluptatum? Asperiores sapiente non, aperiam quia at totam perspiciatis? Reiciendis tempore doloribus magni dolorum. In a commodi non?
+        Eveniet, nemo mollitia dolore soluta sit eligendi cumque cupiditate quaerat, consequatur ad odio debitis atque quod voluptate a fuga aperiam quasi distinctio quibusdam sint similique optio nobis. Odit, quam id!
+        Fugiat voluptatem eos quos hic amet, sequi officiis nulla? Totam, labore nostrum. Tenetur nam doloribus deleniti dolores nemo facilis sit aperiam laboriosam, libero fugiat corrupti inventore quam? Dolorum, corporis quaerat.
+        Esse, tempora temporibus nam asperiores error aut blanditiis unde ab tenetur. Error ullam voluptas dolorem fuga sit nesciunt perferendis exercitationem reprehenderit eveniet nulla quam provident officia temporibus, laboriosam qui unde!
+        Corrupti, tempora perferendis nemo placeat autem cumque sunt rerum mollitia excepturi vel. Quas labore harum itaque impedit quibusdam architecto provident et minus obcaecati id, autem saepe? Inventore a soluta iste.
+        Ullam ab saepe veniam eum excepturi tempore aperiam cumque. Quos odit corrupti asperiores ipsam reiciendis harum animi soluta, dolorum vitae possimus itaque reprehenderit exercitationem nihil, ut optio tenetur doloremque repellat.
+        Quos ad magnam autem ea corporis molestias laboriosam necessitatibus soluta labore possimus minima, illum esse. Saepe iure, commodi maxime eligendi facilis quis velit accusamus praesentium earum. Laborum rerum modi ipsa.
+        Doloribus veniam voluptate eveniet, eum deleniti incidunt maiores quis, beatae quibusdam expedita numquam hic ipsum dignissimos unde aperiam exercitationem ex? Ipsum neque veritatis nulla impedit quos ad reprehenderit officiis vero.
+        Qui ad error, pariatur a dolorem optio non suscipit illum inventore consequuntur voluptatum doloremque dolorum dolor dignissimos eveniet, nihil atque dolores placeat ex rerum quis culpa corrupti exercitationem fuga! Iure?
+      </div>
+      <div class="col-4 border border-danger">
+        <div class="h-100" id="map"></div>
+      </div>
     </main>
 
-    <footer></footer>
+    <footer class="row"></footer>
 
-
-
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOU1SAe_B5ogKnNcBj-EqY_Lq8Y9cvDE&callback=initMap">
+    </script>
+    <script src="./components/maps.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./components/currnetLocation.js"></script>
     <script src="./components/quotes.js"></script>
