--- a/index.html
+++ b/index.html
@@ -8,20 +8,38 @@
       <title>hackathon</title>
   </head>
   <body class="container">
-    <header>
-      <div class="location"></div>
+    <header class="row border border-warning">
+      <div class="col border border-warning">
+        1 of 3
+      </div>
+      <div class="col-6 border border-warning">
+        2 of 3 (wider)
+      </div>
+      <div class="col border border-warning">
+        <div class="location border border-primary m-1"></div>
+        <div class="weather border border-primary m-1"></div>
+      </div>
     </header>
 
     <main>
-
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
+      <h1>Hello</h1>
     </main>
 
-    <footer></footer>
-
+    <footer class="row border border-warning"></footer>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="./components/currnetLocation.js"></script>
+    <script src="./components/locationWeather.js"></script>
+    <script src="./components/greeting.js"></script>
     <script src="./components/quotes.js"></script>
     <script src="./components/App.js"></script>
     <script src="main.js"></script>
