Commiting before format fix

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Hackathon2 Team5</title>
 </head>
 <body class="container">
-  <header>
-      <div class="location"></div>
+  <header class="row d-inline-block">
+      <div class="location d-inline-block"></div>
   </header>
   <main>
     <div class="row">
@@ -25,7 +25,7 @@
       </div>
     </div>
   </main>
-  <footer></footer>
+  <div id="footer" class="row"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
   <!-- <script src="components/app.js"></script> -->
   <script src="./components/inputs.js"></script>
@@ -33,6 +33,7 @@
   <script src="./components/currnetLocation.js"></script>
   <script src="./components/quotes.js"></script>
   <script src="./components/App.js"></script>
+  <script src="./components/backUpMap.js"></script>
   <script src="components/main.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKxtJSTByPlzIrDLdqzlZ66eIoomq__nQ&callback=mapSetup.initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKxtJSTByPlzIrDLdqzlZ66eIoomq__nQ&callback=initMap"></script>
 </body>
