--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <main class="row">
-      <div class="col-8 col-sm-8 col-md-8 col-lg-8 col-xl-8 border border-danger" id="news"></div>
+      <div class="col-8 col-sm-8 col-md-8 col-lg-8 col-xl-8 border border-danger" id="news" style="overflow: auto; height: 800px;"></div>
       <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 border border-danger">
         <div class="h-100" id="map"></div>
       </div>
