get name function which could save users localstorage

--- a/index.html
+++ b/index.html
@@ -9,11 +9,22 @@
   </head>
   <body class="container">
     <header class="row">
-      <div class="col border border-danger">
+      <div class="col border border-danger d-flex flex-column justify-content-center align-items-center">
           <div class="location border border-primary m-1"></div>
           <div class="weather border border-primary m-1"></div>
       </div>
-      <div class="col-6 text-center border border-danger">Header</div>
+      <div class="col-6 border border-danger p-2 d-flex justify-content-center">
+
+        <div class="input-group input-group-lg greeting p-2 d-flex flex-column justify-content-center align-items-center">
+          <form><input type="text"
+                      class="form-control border border-light"
+                      aria-label="Large"
+                      aria-describedby="inputGroup-sizing-sm"
+                      placeholder="Please enter your name"></form>
+          <p class="greet d-none h1 text-warning"></p></div>
+        </div>
+
+      </div>
       <div class="col border border-danger">
         stock
       </div>
