Hackathon 2: I made the stock ticker scroll vertically in an infinite loop

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+      <link rel="stylesheet" href="./style.css" />
       <title>Hackathon 2</title>
   </head>
   <body class="container">
@@ -22,10 +23,10 @@
                       aria-describedby="inputGroup-sizing-sm"
                       placeholder="Please enter your name"></form>
           <p class="greet d-none h1 text-warning"></p></div>
-        </div>
+
 
       </div>
-      <div class="col border border-danger">
+      <div class="col border border-danger stocks-wrapper">
           <div class="stocks"></div>
       </div>
     </header>
