Added a news header

--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
 
       </div>
       <div class="col border border-danger stocks-wrapper">
-          <div class="stocks"></div>
+        <p class="stocks"></p>
       </div>
     </header>
 
     <main class="row">
       <div class="col-8 col-sm-8 col-md-8 col-lg-8 col-xl-8 border border-danger" id="news" style="overflow: auto; height: 800px;">
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 text-warning">
-          <p class="display-4">Here Are The Top Headlines:</p>
-        </div>
+        <h1 class="text-warning news-heading text-center">Here Are The Top Headlines:</h1>
       </div>
       <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 border border-danger">
         <div class="h-75" id="map"></div>
