--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           </form>
         </div>
         <div class="row">
-          <button class="col-3 mx-1">Traffic</button>
-          <button class="col-3 mx-1">Mass Transit</button>
-          <button class="col-3 mx-1">Biking</button>
+          <button id="traffic-button" class="col-3 mx-1">Traffic</button>
+          <button id="transit-button" class="col-3 mx-1">Mass Transit</button>
+          <button id="biking-button" class="col-3 mx-1">Biking</button>
         </div>
       </div>
     </main>
@@ -53,6 +53,7 @@
     <footer class="row"></footer>
 
     <script src="./components/maps.js"></script>
+    <script src="./components/mapLayers.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./components/greeting.js"></script>
     <script src="./components/locationWeather.js"></script>
