New Api Key For Stocks; KEEP IT COMMENTED OUT

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="stocks"></div>
       </div>
     </header>
-
+    <footer class="row"></footer>
     <main class="row">
       <div class="col-8 col-sm-8 col-md-8 col-lg-8 col-xl-8 border border-danger" id="news" style="overflow: auto; height: 800px;"></div>
       <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 border border-danger">
@@ -50,7 +50,7 @@
       </div>
     </main>
 
-    <footer class="row"></footer>
+    <!-- <footer class="row"></footer> -->
 
     <script src="./components/maps.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
