--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <script src="./components/news.js"></script>
     <script src="./components/App.js"></script>
     <script src="main.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOU1SAe_B5ogKnNcBj-EqY_Lq8Y9cvDE&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOU1SAe_B5ogKnNcBj-EqY_Lq8Y9cvDE"></script>
 
   </body>
 </html>
