--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </main>
 
     <script src="./components/map.js"></script>
-    <script src="./components/maps.js"></script>
+    <!-- <script src="./components/maps.js"></script> -->
     <script src="./components/mapLayers.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./components/greeting.js"></script>
