recommend movie based on weather feature is completed

--- a/index.html
+++ b/index.html
@@ -54,11 +54,27 @@
         </div>
       </div>
     </main>
+    <footer>
+      <div class="row">
+        <div class="d-flex col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 border border-danger" id="movies"
+          style="height: 200px; overflow: auto;">
+          <div class="Poster m-1 p-1"></div>
+          <div class="desc d-flex flex-column m-1 p-1">
+            <h4 class="text-muted movieTitle"></h4>
+            <p><span class="text-muted year h6"></span>
+              <span class="text-muted rating h6"></span>
+              <span class="text-muted runtime h6"></span></p>
+              <p class="text-muted summary"></p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="./components/maps.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./components/greeting.js"></script>
     <script src="./components/locationWeather.js"></script>
+    <script src="./components/movies.js"></script>
     <script src="./components/stocks.js"></script>
     <script src="./components/quotes.js"></script>
     <script src="./components/news.js"></script>
