--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
     </main>
 
     <script src="./components/map.js"></script>
-    <!-- <script src="./components/maps.js"></script> -->
     <script src="./components/mapLayers.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./components/greeting.js"></script>
@@ -67,7 +66,7 @@
     <script src="./components/news.js"></script>
     <script src="./components/App.js"></script>
     <script src="main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOU1SAe_B5ogKnNcBj-EqY_Lq8Y9cvDE"></script>
+    <script async defer id="google" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOU1SAe_B5ogKnNcBj-EqY_Lq8Y9cvDE&callback=map.getLocation"></script>
 
   </body>
 </html>
