--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <script src="./components/news.js"></script>
     <script src="./components/App.js"></script>
     <script onload="loadScriptThing()" src="main.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOU1SAe_B5ogKnNcBj-EqY_Lq8Y9cvDE&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOU1SAe_B5ogKnNcBj-EqY_Lq8Y9cvDE&callback=map.getLocation"></script>
 
   </body>
 </html>
