--- a/index.html
+++ b/index.html
@@ -77,9 +77,6 @@
         news.getNews('Headlines')
       }
     </script>
-    <script src="./components/map.js"></script>
-    <script src="./components/mapLayers.js"></script>
-    <script src="./components/maps.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./components/greeting.js"></script>
     <script src="./components/locationWeather.js"></script>
@@ -89,7 +86,8 @@
     <script src="./components/news.js"></script>
     <script src="./components/App.js"></script>
     <script onload="loadScriptThing()" src="main.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOU1SAe_B5ogKnNcBj-EqY_Lq8Y9cvDE&callback=map.getLocation"></script>
+    <script src="./components/maps.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOU1SAe_B5ogKnNcBj-EqY_Lq8Y9cvDE&callback=initMap"></script>
 
   </body>
 </html>
