--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
           <div class="desc d-flex flex-column m-1 p-1">
             <h4 class="text-muted movieTitle"></h4>
             <p><span class="text-muted year h6"></span>
-              <span class="text-muted rating h6"></span>
-              <span class="text-muted runtime h6"></span></p>
+              <span class="text-muted rating bg-warning h6"></span>
             <p class="text-muted summary"></p>
           </div>
         </div>
