--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="col-6 border border-danger p-2 d-flex justify-content-center">
 
         <div class="input-group input-group-lg greeting p-2 d-flex flex-column justify-content-center align-items-center">
-          <form><input type="text"
+          <form><input id="greeting-form" type="text"
                       class="form-control border border-light"
                       aria-label="Large"
                       aria-describedby="inputGroup-sizing-sm"
@@ -43,7 +43,7 @@
       <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 border border-danger">
         <div class="h-75" id="map"></div>
         <div>
-          <form action="">
+          <form id="map-form" action="">
             <label for="search">Search Area</label>
             <input type="text" name="search" id="search">
             <label for="destination">Destination</label>
@@ -87,7 +87,7 @@
     <script src="./components/App.js"></script>
     <script onload="loadScriptThing()" src="main.js"></script>
     <script src="./components/maps.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOU1SAe_B5ogKnNcBj-EqY_Lq8Y9cvDE&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOU1SAe_B5ogKnNcBj-EqY_Lq8Y9cvDE&callback=initMap&libraries=places"></script>
 
   </body>
 </html>
