after fixed greeting method

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <header class="row">
       <div class="col border border-danger d-flex flex-column justify-content-center align-items-center">
           <div class="location border border-primary m-1"></div>
-          <div class="weather border border-primary m-1"></div>
+          <div class="weather border border-primary m-1 px-2"></div>
       </div>
       <div class="col-6 border border-danger p-2 d-flex justify-content-center">
 
         <div class="input-group input-group-lg greeting p-2 d-flex flex-column justify-content-center align-items-center">
-          <form><input id="greeting-form" type="text"
+          <form id="greeting-form"><input type="text"
                       class="form-control border border-light"
                       aria-label="Large"
                       aria-describedby="inputGroup-sizing-sm"
