added date & time

--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
   <body class="container">
 
     <header class="row">
-      <div class="col border border-danger d-flex flex-column justify-content-center align-items-center">
-          <div class="location border border-primary m-1"></div>
-          <div class="weather border border-primary m-1 px-2"></div>
+      <div class="col border border-danger d-flex flex-row justify-content-center align-items-center">
+        <div class="dateTime d-flex flex-column border border-danger">
+            <div class="date my-1 py-1 border border-danger"></div>
+            <div class="time my-1 py-1 border border-danger"></div>
+        </div>
+        <div class="locationWeather d-flex flex-column">
+            <div class="location border border-primary m-1"></div>
+            <div class="weather border border-primary m-1 px-2"></div>
+          </div>
       </div>
       <div class="col-6 border border-danger p-2 d-flex justify-content-center">
 
@@ -77,6 +83,7 @@
       }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./components/clock.js"></script>
     <script src="./components/greeting.js"></script>
     <script src="./components/locationWeather.js"></script>
     <script src="./components/movies.js"></script>
