commiting before merge for css update

--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
           <form id="map-form" action="">
             <label for="search">Search Area</label>
             <input type="text" name="search" id="search">
-            <label for="destination">Destination</label>
-            <input type="text" name="destination" id="destination">
           </form>
+          <button id="route-button">Find Route</button>
         </div>
         <div class="row">
           <button id="traffic-button" class="col-3 mx-1">Traffic</button>
