--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
       <div class="col-12 order-2 border-top border-bottom border-dark mb-1 col-sm-4" style="overflow: auto; height: 800px;">
         <div class="h-75" id="map"></div>
         <div>
-          <form id="map-form" action="">
-            <label for="search">Search Area</label>
-            <input type="text" name="search" id="search">
+          <form id="map-form" action="" class="row justify-content-center">
+            <label for="search" class="mr-1 mt-1">Search Area</label>
+            <input type="text" name="search" id="search" class="border mt-1 mr-1">
+            <button id="route-button" class="border-success text-success">Route</button>
           </form>
         </div>
         <div class="row justify-content-center">
-          <button id="traffic-button" class="col-3 mx-1">Traffic</button>
-          <button id="transit-button" class="col-3 mx-1">Mass Transit</button>
-          <button id="biking-button" class="col-3 mx-1">Biking</button>
-          <button id="route-button">Find Route</button>
+          <button id="traffic-button" class="col-3 mx-1 border mt-1">Traffic</button>
+          <button id="transit-button" class="col-3 mx-1 border mt-1">Mass Transit</button>
+          <button id="biking-button" class="col-3 mx-1 border mt-1">Biking</button>
         </div>
       </div>
     </main>
