Fixed stock scrolling issue

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p class="greet d-none h1 text-dark"></p></div>
 
       </div>
-      <div class="col-6 border-bottom border-dark mb-3stocks-wrapper d-flex order-2 col-sm-3 order-sm-3">
+      <div class="col-6 border-bottom border-dark stocks-wrapper d-flex order-2 col-sm-3 order-sm-3">
         <p class="stocks"></p>
       </div>
     </header>
