--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
     <main class="row">
       <div class="col-12 order-1 border-top border-bottom border-dark mb-1 col-sm-8" id="news" style="overflow: auto; height: 800px;">
         <h1 class="text-primary news-heading text-center">Search The Top Headlines:</h1>
-        <div class="search">
-          <input type="text" class="searchBar w-100 border">
-        </div>
+          <form class="form-inline" id="news-form">
+            <input type="text" class="searchBar w-75 border" name="searchNews" required="required" />
+            <button type="submit" name="news-submit" id="news-submit">Submit</button>
+          </form>
       </div>
       <div class="col-12 order-2 border-top border-bottom border-dark mb-1 col-sm-4" style="overflow: auto; height: 800px;">
         <div class="h-75" id="map"></div>
