--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
     <div class="row qoute"></div>
 
     <main class="row">
-      <div class="col-12 order-1 border-top border-bottom border-dark mb-1 col-sm-8" id="news" style="overflow: auto; height: 800px;">
+      <div class="col-12 order-1 border-top border-bottom border-dark mb-1 col-sm-8">
         <h1 class="text-primary news-heading text-center">Search The Top Headlines:</h1>
           <form class="form-inline" id="news-form">
             <input type="text" class="searchBar w-75 border" name="searchNews" required="required" />
             <button type="submit" name="news-submit" id="news-submit">Submit</button>
           </form>
+        <div id="news" style="overflow: auto; height: 800px;"></div>
       </div>
       <div class="col-12 order-2 border-top border-bottom border-dark mb-1 col-sm-4" style="overflow: auto; height: 800px;">
         <div class="h-75" id="map"></div>
