Changed clock from 24H time to 12H time, made the news back to 800px height with scroll bar, and added NASA background image to greeting

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <input type="text" class="form-control " aria-label="Large" aria-describedby="inputGroup-sizing-sm"
                 placeholder="Please Enter Your Name">
             </form>
-            <p class="greet d-none h1 text-dark"></p>
+            <p class="greet d-none h1 text-white"></p>
           </div>
         </div>
         <div class="col-6 border-bottom border-dark stocks-wrapper d-flex order-2 col-sm-3 order-sm-3">
@@ -62,7 +62,7 @@
               <input type="text" class="searchBar w-75 mb-2" name="searchNews" required="required" />
               <button type="submit" name="news-submit" id="news-submit" class="mb-2">Submit</button>
             </form>
-            <div id="news"></div>
+            <div id="news" style="height:800px; overflow:auto;"></div>
           </div>
         </main>
       </div>
@@ -74,6 +74,7 @@
     <script src="./components/stocks.js"></script>
     <script src="./components/quotes.js"></script>
     <script src="./components/news.js"></script>
+    <script src="./components/nasa.js"></script>
     <script src="./components/App.js"></script>
     <script src="main.js"></script>
   </body>
