--- a/movies.html
+++ b/movies.html
@@ -44,7 +44,7 @@
               <input type="text" class="form-control " aria-label="Large" aria-describedby="inputGroup-sizing-sm"
                 placeholder="Please Enter Your Name">
             </form>
-            <p class="greet d-none h1 text-dark"></p>
+            <p class="greet d-none h1 text-white"></p>
           </div>
         </div>
         <div class="col-6 border-bottom border-dark stocks-wrapper d-flex order-2 col-sm-3 order-sm-3">
@@ -73,6 +73,7 @@
     <script src="./components/stocks.js"></script>
     <script src="./components/movies.js"></script>
     <script src="./components/quotes.js"></script>
+    <script src="./components/nasa.js"></script>
     <script src="./components/AppMovies.js"></script>
     <script src="mainMovies.js"></script>
   </body>
