--- a/maps.html
+++ b/maps.html
@@ -45,7 +45,7 @@
               <input type="text" class="form-control " aria-label="Large" aria-describedby="inputGroup-sizing-sm"
                 placeholder="Please Enter Your Name">
             </form>
-            <p class="greet d-none h1 text-dark"></p>
+            <p class="greet d-none h1 text-white"></p>
           </div>
         </div>
         <div class="col-6 border-bottom border-dark stocks-wrapper d-flex order-2 col-sm-3 order-sm-3">
@@ -82,6 +82,7 @@
     <script src="./components/stocks.js"></script>
     <script src="./components/quotes.js"></script>
     <script src="./components/maps.js"></script>
+    <script src="./components/nasa.js"></script>
     <script src="./components/AppMaps.js"></script>
     <script src="mainMaps.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOU1SAe_B5ogKnNcBj-EqY_Lq8Y9cvDE&callback=initMap&libraries=places"></script>
