responsive on maps and movies; border around search and input

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           <div class="col-12 order-1 mb-1 col-sm-8">
             <h1 class="text-primary news-heading text-center">Search The Top Headlines:</h1>
             <form class="form-inline" id="news-form">
-              <input type="text" class="searchBar w-75 mb-2" name="searchNews" required="required" />
-              <button type="submit" name="news-submit" id="news-submit" class="mb-2">Submit</button>
+              <input type="text" class="searchBar w-75 mb-2 border" name="searchNews" required="required" />
+              <button type="submit" name="news-submit" id="news-submit" class="border mb-2 ml-1">Submit</button>
             </form>
             <div id="news" style="height:800px; overflow:auto;"></div>
           </div>
