--- a/maps.html
+++ b/maps.html
@@ -45,10 +45,10 @@
               <input type="text" class="form-control " aria-label="Large" aria-describedby="inputGroup-sizing-sm"
                 placeholder="Please Enter Your Name">
             </form>
-            <p class="greet d-none h1 text-white"></p>
+            <p class="col-12 greet d-none h1 text-white"></p>
           </div>
         </div>
-        <div class="col-6 border-bottom border-dark stocks-wrapper d-flex order-2 col-sm-3 order-sm-3">
+        <div class="col-6 border-bottom border-dark stocks-wrapper d-flex order-2 col-sm-3 order-sm-3 justify-content-end">
           <p class="stocks"></p>
         </div>
       </header>
